# MelCausalVAE

./: .gitignore  README.md  TODO.md  TRAINING.md  __init__.py  accelerate_config.yaml  baseline_models.py  baseline_vocoder.py  download_espeak.py  download_wavlm.py  eval.py  eval_config.yaml  eval_encode_single_chunks.py  eval_hazem.py  eval_mapper_invertibility.py  eval_vocoder.py  eval_vodocer.py  eval_vq_components.py  eval_wrapper.py  evaluate.py  example_eval_hyperparam_sweep.json  inference.py  launch_training.sh  plot_sweep_hparams.py  proj_script.py  pyproject.toml  requirements.txt  run_evals.py  run_inference.py  swap.py  train.py  train_mapper.sh  train_semantic_mapper.py  train_standard.py  vae_cfg.yaml  vq_inference.py  wandb_log_vq_audio_table.py
configs/: main.yaml  proj_script.yaml
data/: audio_dataset.py  bpe.json  bpe_tokenizer.json  e2tts_librispeech_pc_test_clean.json  extract_wavlm_features.py  libri_tts.py  libri_tts_r.py  librispeech100.py  librispeechHubert.py  librispeech_align.py  librispeech_align_test.py  mls.py  semantic_extraction.py  tokenization.py  tokenizer.json  tokenizer.py  tokenizer_inference.py  vocab.json
evaluation/: plot_metrics.py  run_chunk_isolation_sweep.py  run_tail_sweep.py
modules/: ConvformerDecoder.py  DIT.py  Decoder.py  Encoder.py  EncoderTada.py  Encoder_old.py  VAE.py  VAE_standard.py  __init__.py  alignement.py  aligner.py  alignment.py  builder.py  cfm.py  configs.py  ctc.py  decoder_standard_vae.py  downsampler.py  downsampler_2d.py  encoder_1d.py  feature_extractor.py  flash_attn_encoder.py  old_aligner.py  (+15 more)
(+226 files in other folders)
