[project]
name = "melcausalvae"
version = "0.1.0"
description = "Speech AE"
readme = "README.md"

dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",

    "numpy==1.26.4",
    "soundfile",

    "transformers==5.0.0",
    "hydra-core",
    "torchdiffeq",
    "beartype",
    "torchcodec==0.7",

    "vocos==0.1.0",
]

[project.optional-dependencies]
training = [
    "deepspeed==0.18.4",
    "accelerate==1.13.0",
    "datasets==4.1.0",
    "matplotlib",
    "wandb",
    "jiwer",
    "torchaudio_filters",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "data*"]
exclude = ["configs*", "evaluation*"]